--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Luna Music</string>
     <string name="app_title">LUNA MUSIC</string>
     <string name="action_settings">Settings</string>
-    <string name="album_title">TextView</string>
+    <string name="album_title">TextView TextView TextView</string>
     <string name="title_activity_now_playing">NowPlaying</string>
     <string name="nowPlaying_albumImage">Album image</string>
+    <string name="nowPlaying_start">開始</string>
+    <string name="nowPlaying_artist">Luckilyの世界</string>
 </resources>
