--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="nowPlaying_albumImage">Album image</string>
     <string name="nowPlaying_start">開始</string>
     <string name="nowPlaying_artist">Luckilyの世界</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
